[복습] Item 1, 2